[gd_scene load_steps=4 format=3 uid="uid://yfqhri6cajtq"]

[ext_resource type="Script" uid="uid://dmc0hgvpo4k2" path="res://results.gd" id="1"]

[sub_resource type="Shortcut" id="2"]

[sub_resource type="Shortcut" id="4"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.607843)
offset_right = 164.0
offset_bottom = 272.0
scale = Vector2(2, 2)
metadata/_edit_lock_ = true

[node name="Node2D" type="Node2D" parent="Panel"]

[node name="Label" type="Label" parent="Panel/Node2D"]
offset_left = 16.0
offset_top = 4.0
offset_right = 68.0
offset_bottom = 27.0
text = "COOL"

[node name="Label2" type="Label" parent="Panel/Node2D"]
offset_left = 16.0
offset_top = 28.0
offset_right = 68.0
offset_bottom = 51.0
text = "GOOD"

[node name="Label3" type="Label" parent="Panel/Node2D"]
offset_left = 16.0
offset_top = 52.0
offset_right = 68.0
offset_bottom = 75.0
text = "SAFE"

[node name="Label4" type="Label" parent="Panel/Node2D"]
offset_left = 16.0
offset_top = 76.0
offset_right = 68.0
offset_bottom = 99.0
text = "BAD"

[node name="Label5" type="Label" parent="Panel/Node2D"]
offset_left = 16.0
offset_top = 100.0
offset_right = 68.0
offset_bottom = 123.0
text = "MISS"

[node name="Label6" type="Label" parent="Panel/Node2D"]
offset_left = 16.0
offset_top = 132.0
offset_right = 68.0
offset_bottom = 155.0
text = "TECH"

[node name="Label7" type="Label" parent="Panel/Node2D"]
offset_left = 16.0
offset_top = 156.0
offset_right = 81.0
offset_bottom = 179.0
text = "CHANCE"

[node name="Label10" type="Label" parent="Panel/Node2D"]
offset_left = 16.0
offset_top = 180.0
offset_right = 81.0
offset_bottom = 203.0
text = "FINAL"

[node name="Label8" type="Label" parent="Panel/Node2D"]
offset_left = 16.0
offset_top = 212.0
offset_right = 77.0
offset_bottom = 235.0
text = "COMBO"

[node name="Label9" type="Label" parent="Panel/Node2D"]
offset_left = 16.0
offset_top = 240.0
offset_right = 68.0
offset_bottom = 263.0
text = "TOTAL"

[node name="Node2D2" type="Node2D" parent="Panel"]

[node name="Label" type="Label" parent="Panel/Node2D2"]
offset_left = 96.0
offset_top = 4.0
offset_right = 148.0
offset_bottom = 27.0

[node name="Label2" type="Label" parent="Panel/Node2D2"]
offset_left = 96.0
offset_top = 28.0
offset_right = 148.0
offset_bottom = 51.0

[node name="Label3" type="Label" parent="Panel/Node2D2"]
offset_left = 96.0
offset_top = 52.0
offset_right = 148.0
offset_bottom = 75.0

[node name="Label4" type="Label" parent="Panel/Node2D2"]
offset_left = 96.0
offset_top = 76.0
offset_right = 148.0
offset_bottom = 99.0

[node name="Label5" type="Label" parent="Panel/Node2D2"]
offset_left = 96.0
offset_top = 100.0
offset_right = 148.0
offset_bottom = 123.0

[node name="Label6" type="Label" parent="Panel/Node2D2"]
offset_left = 96.0
offset_top = 132.0
offset_right = 148.0
offset_bottom = 155.0

[node name="Label7" type="Label" parent="Panel/Node2D2"]
offset_left = 96.0
offset_top = 156.0
offset_right = 148.0
offset_bottom = 179.0

[node name="Label10" type="Label" parent="Panel/Node2D2"]
offset_left = 96.0
offset_top = 180.0
offset_right = 148.0
offset_bottom = 203.0

[node name="Label8" type="Label" parent="Panel/Node2D2"]
offset_left = 96.0
offset_top = 212.0
offset_right = 148.0
offset_bottom = 235.0

[node name="Label9" type="Label" parent="Panel/Node2D2"]
offset_left = 96.0
offset_top = 240.0
offset_right = 148.0
offset_bottom = 263.0

[node name="Label" type="Label" parent="."]
offset_left = 248.0
offset_top = 248.0
offset_right = 335.0
offset_bottom = 297.0
rotation = -19.3732
scale = Vector2(7, 7)
text = "A VIDA Ã‰ UMA LIFE"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label2" type="Label" parent="."]
offset_left = 728.0
offset_top = 312.0
offset_right = 784.0
offset_bottom = 335.0
scale = Vector2(4, 4)
text = "99.99%"
horizontal_alignment = 2

[node name="Label4" type="Label" parent="."]
visible = false
offset_left = 568.0
offset_top = 392.0
offset_right = 952.0
offset_bottom = 415.0
text = "New best! Previous: 00.01%"
horizontal_alignment = 2

[node name="Label3" type="Label" parent="."]
offset_left = 376.0
offset_top = 16.0
offset_right = 664.0
offset_bottom = 48.0
scale = Vector2(2, 2)
text = "asdasdasd"
autowrap_mode = 2

[node name="Button" type="Button" parent="."]
offset_left = 832.0
offset_top = 472.0
offset_right = 896.0
offset_bottom = 504.0
scale = Vector2(2, 2)
shortcut = SubResource("2")
text = "Return"

[node name="Button2" type="Button" parent="."]
offset_left = 704.0
offset_top = 472.0
offset_right = 760.0
offset_bottom = 504.0
scale = Vector2(2, 2)
shortcut = SubResource("4")
text = "Retry"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
